src/test/deca/context/valid/decl_list_params.deca
// Description:
//    Test de la déclaration d'une liste de paramètres dans une méthode
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
  void helloWorld(int a, float b) {
    println("Hello World !");
  }
}
